--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -38,7 +38,7 @@
   .layout-dashboard .header-control .header-search {
     margin: 0 7px;
   }
-  .layout-dashboard .header-control .btn-sign-in span {
+  .layout-dashboard .header-control .btn-login span {
     display: inline;
   }
   .profile-nav-bg {
