--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -19,6 +19,7 @@ body {
   font-weight: 400;
   font-family: open sans, Helvetica, Arial, sans-serif;
 }
+
 .ant-layout.ant-layout-has-sider {
   flex-direction: row;
 }
@@ -1278,6 +1279,7 @@ img {
   color: #fff;
 }
 .copyright {
+  text-align: center;
   color: #8c8c8c;
   margin-top: 7px;
 }
