--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3089,7 +3089,7 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
     white-space: normal;
 }
 .select-item .ant-input-number {
-  width: 100%;
+  width: 200px; 
 }
 .hover-changepw :hover{
     cursor: pointer;
@@ -3102,23 +3102,4 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
   display: flex;
   z-index: 999;
   top: 0;
-}
-.ant-input-number{
-  border-radius: 4px !important;
-}
-.radio-group-container {
-  display: flex;
-  margin-left: 24px;
-  justify-content: space-between;
-}
-
-.radio-group {
-  display: flex;
-}
-
-.column {
-  display: flex;
-  margin-left: 20px;
-  flex-direction: column;
-  gap: 8px; /* khoảng cách giữa các Radio */
 }
